# haskell-dev-environment

./: .gitignore  DEMO_REPORT.txt  INDEX.txt  INSTALLATION_GUIDE.md  INSTALLATION_SUCCESS.txt  README.md  START-TUTORIAL-2.sh  START-TUTORIAL.sh  TEST_RESULTS.txt  TUTORIAL-2-README.txt  TUTORIAL_README.txt  haskell-setup.sh  haskell-tutorial-2.sh  haskell-tutorial.sh  python-setup.sh  test-prerequisites.sh
haskell-project-template/: .gitignore  README.md  cabal.project  my-project.cabal
haskell-project-template/app/: Main.hs
haskell-project-template/src/: MyLib.hs
py/: requirements.txt
py/scripts/: generate_data.py
sys-lang-checker/: .gitignore  PROJECT_SUMMARY.md  README.md  TEST_REPORT.md  UPDATED_FEATURES.md  sys-lang-checker.cabal
sys-lang-checker/app/: Main.hs
sys-lang-checker/examples/: go-1.21.hs  haskell-ghc-9.6.hs  haskell-valid.hs  java-21-valid.hs  kotlin-1.9-valid.hs  python-3.13-valid.hs  rust-1.75.hs  typescript-nodejs-valid.hs
sys-lang-checker/src/: Logger.hs  Types.hs  Validator.hs
sys-lang-checker/test/: Main.hs
