cabal-version:      3.0
name:               my-project
version:            0.1.0.0
synopsis:           A Haskell project
description:        A sample Haskell project compatible with GHC 9.6.7 and 9.12.2
license:            BSD-3-Clause
author:             Your Name
maintainer:         your.email@example.com
category:           Development
build-type:         Simple
extra-doc-files:    README.md
tested-with:        GHC == 9.6.7, GHC == 9.12.2

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base >=4.18 && <5
    hs-source-dirs:   src
    default-language: GHC2021

executable my-project
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >=4.18 && <5,
        my-project
    hs-source-dirs:   app
    default-language: GHC2021

test-suite my-project-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.18 && <5,
        my-project
